refactor: collect(Collectors.toList())를 Stream.toList()로 변경 (#415)